--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src='mermaid.js'></script>
     <link rel="stylesheet" type="text/css" href="semanticui/semantic.css">
     <style>
+    body{
+      padding: 20px;
+    }
     path{
       stroke: black;
     }
