--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-96922345-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+    <script>
         SVGElement.prototype.getTransformToElement = SVGElement.prototype.getTransformToElement || function(elem) {
         return elem.getScreenCTM().inverse().multiply(this.getScreenCTM());
     };
